# N-body-simulation

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: OpenCLConfig.cmake  OpenGLConfig.cmake  bootstrap_vcpkg.cmake
include/: oclutils.hpp  oglutils.hpp
kernels/: krn_reduce_global.cl  krn_reduce_local.cl  krn_scan.cl  krn_vectoradd.cl
src/opencl_06_opengl_nbody/: CMakeLists.txt  MyApp.cpp  MyApp.h  main.cpp
src/opencl_06_opengl_nbody/common/: GLUtils.cpp  GLUtils.hpp  gCamera.cpp  gCamera.h  gShaderProgram.cpp  gShaderProgram.h
src/opencl_06_opengl_nbody/kernels/: GLinterop.cl
src/opencl_06_opengl_nbody/shaders/: particle.frag  particle.geom  particle.vert
